--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "engines": {
-    "node": "8.1.1",
-    "npm": "5.0.4"
+    "node": "8.6.0",
+    "npm": "5.6.0"
   },
   "scripts": {
     "build": "tsc",
@@ -17,7 +17,9 @@
   "author": "Sean Veal",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.3",
-    "typescript": "^2.8.1"
+    "express": "^4.16.3"
+  },
+  "devDependencies": {
+    "typescript": "^2.8.3"
   }
 }
