--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "dev": "ts-node ./lib/index.ts",
     "start": "node ./dist/index.js",
     "prod": "npm run build && npm start",
+    "postinstall": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Sean Veal",
