--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "npm": "5.6.0"
   },
   "scripts": {
-    "build": "tsc",
-    "dev": "ts-node ./lib/index.ts",
-    "start": "node ./dist/index.js",
+    "build": "tsc --project server",
+    "dev": "ts-node server/lib/index.ts",
+    "start": "node server/dist/index.js",
     "prod": "npm run build && npm start",
     "postinstall": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
