feature: mongoose + other keys

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "build": "tsc --project server",
     "dev": "ts-node server/lib/index.ts",
+    "dev:watch": "nodemon --config ./server/nodemon.json",
     "start": "node server/dist/index.js",
     "prod": "npm run build && npm start",
     "postinstall": "npm run build",
@@ -19,6 +20,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.3",
+    "mongoose": "^5.0.17",
+    "nodemon": "^1.17.3",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0"
   },
