--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "passport-google-oauth20": "^1.0.0"
   },
   "devDependencies": {
+    "@types/mongodb": "^3.0.17",
+    "@types/mongoose": "^5.0.11",
     "typescript": "^2.8.3"
   }
 }
