--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "nodemon": "^1.17.3",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
-    "passport-google-oauth20": "^1.0.0"
+    "passport-google-oauth20": "^1.0.0",
+    "stripe": "^6.0.0"
   },
   "devDependencies": {
     "@types/mongodb": "^3.0.17",
